# resizer

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  com.github.peteruithoven.resizer.yml  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
data/: com.github.peteruithoven.resizer.appdata.xml  com.github.peteruithoven.resizer.appdata.xml.in  com.github.peteruithoven.resizer.contract  com.github.peteruithoven.resizer.desktop  com.github.peteruithoven.resizer.desktop.in  com.github.peteruithoven.resizer.gschema.xml  meson.build
debian/: changelog  control  copyright  rules
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.peteruithoven.resizer.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+160 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+156 more)
src/: Application.vala  DropArea.vala  ErrorPage.vala  HeaderBar.vala  MessageCenter.vala  ResizePage.vala  Resizer.vala  ResizerWindow.vala  ResizingPage.vala  Window.vala  config.vala.in  meson.build  resizer.vala
